# yolo

./: .gitignore  collect_dataset.py  fine_tune.py  preprocess_dataset.py  pyproject.toml  roi.json  test_slack.py  yolo_webcam.py
.claude/: settings.local.json
door/: collect_dataset.py  export_onnx.py  export_trt.py  preprocess.py  train.py  webcam.py
human/: export_yolo_onnx.py  export_yolo_trt.py  person_counter.py  webcam.py
jetson/: export_onnx.py
