[project]
name = "yolo-door-agent"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "ultralytics",
    "opencv-python",
    "requests",
    "torch",
    "torchvision",
]

[tool.setuptools]
packages = ["human", "door"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
